--- a/css/categoria.css
+++ b/css/categoria.css
@@ -14,6 +14,8 @@
   font-size: 25px;
   border-bottom: solid;
   padding-bottom: 2rem;
+  text-align: left;
+  font-weight: 900;
 }
 
 .categoria a {
@@ -23,7 +25,7 @@
   cursor: pointer;
   font-weight: 900;
   font-size: 30px;
-  text-align: right;
+
   transition: 0.3ms;
   text-decoration: none;
   margin-top: 4rem;
@@ -35,7 +37,14 @@
 
 .categoria h4 {
   padding-right: 2rem;
-  padding-top: 13rem;
+  padding-top: 2rem;
+  text-align: right;
+}
+
+.categoria img {
+  margin-top: 2rem;
+  margin-left: 2rem;
+  text-align: left;
 }
 
 .categoria__amarelo {
