--- a/style.css
+++ b/style.css
@@ -22,10 +22,22 @@ html {
 	height: 3rem;
 	border-radius: 0;
 	border: 1px solid;
-	background-color: #1e0202;
-	color: white;
+	background-color: #000000;
+	color: #ffffff;
 }
 
 .btn-geral:hover {
-	background-color: #4d1010;
+	background-color: #606060;
 }
+
+/* .conteudo a {
+	background-color: #000000;
+	color: #ffffff;
+	padding: 0.5rem 1rem;
+	cursor: pointer;
+	text-decoration: none;
+}
+
+.conteudo a:hover {
+	padding: 0.7rem 1.2rem;
+} */
