--- a/css/pagina-produto.css
+++ b/css/pagina-produto.css
@@ -121,3 +121,53 @@ td {
 #compra button:hover {
 	background-color: rgb(60, 60, 60);
 }
+
+#comentarios {
+	display: flex;
+	flex-direction: column;
+}
+
+.subtitulo {
+	font-size: 25px;
+	font-weight: 900;
+	margin: 2rem 0 1rem 1rem;
+}
+
+.divisao {
+	border: 1px solid black;
+	margin-bottom: 2rem;
+}
+
+.comentario {
+	margin-left: 1rem;
+}
+
+.comentario h3 {
+	float: left;
+	font-size: 20px;
+	font-weight: 900;
+	margin-right: 1rem;
+	align-self: flex-start;
+}
+
+.comentario p {
+	margin-top: 1.5rem;
+}
+
+.rating-comentario {
+	display: flex;
+	flex-direction: row;
+	gap: 0.5rem;
+	margin-top: 2rem;
+	margin-bottom: 4rem;
+}
+
+.rating-comentario img {
+	cursor: pointer;
+}
+
+.likes,
+.dislikes {
+	align-self: flex-end;
+	font-size: 12px;
+}
