--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -30,6 +30,11 @@
 .menu__link {
   text-decoration: none;
   margin-right: 1.25rem;
+  color: #000000;
+}
+
+.menu__link:hover{
+  text-decoration: underline;
 }
 
 .menu__linka {
