--- a/css/header.css
+++ b/css/header.css
@@ -1,8 +1,8 @@
 header {
 	background-image: linear-gradient(
 		to right,
-		rgb(234, 228, 220),
-		rgb(239, 235, 228)
+		rgb(237, 232, 225),
+		rgb(244, 241, 237)
 	);
 }
 
@@ -11,6 +11,7 @@ nav {
 	flex-direction: row;
 	justify-content: center;
 	padding-top: 15px;
+	z-index: 1;
 }
 
 nav ul.nav-principal {
@@ -58,18 +59,17 @@ nav ul.nav-icones i {
 
 /***********SLIDE***********/
 
-section.carousel {
+/* section.carousel {
 	display: flex;
 	width: 100%;
 	flex-direction: row;
 	justify-content: space-between;
 	margin-left: 2rem;
-	margin-top: 8rem;
 }
 
-#img-banner {
+#img-banner img {
 	position: relative;
-	left: -100px;
+	width: 100%;
 }
 
 div.carousel-text {
@@ -123,4 +123,9 @@ i.carousel-arrow {
 	div.carousel-text {
 		left: 0;
 	}
+} */
+
+.carrossel img {
+	margin-top: -150px;
+	position: relative;
 }
