--- a/css/header.css
+++ b/css/header.css
@@ -1,3 +1,7 @@
+* {
+	box-sizing: border-box;
+}
+
 header {
 	background-image: linear-gradient(
 		to right,
@@ -34,7 +38,7 @@ nav ul.nav-principal li {
 .nav--link:hover {
 	color: #ffffff;
 	background-color: #000000;
-	padding: 0.5rem 0rem;
+	padding: 0.5rem 1rem;
 	border-radius: 5px;
 	opacity: 0.7;
 }
