--- a/css/busca.css
+++ b/css/busca.css
@@ -2,7 +2,7 @@
   background: #000000;
   color: var(--branco);
   text-align: center;
-  padding: 2.5em 2em;
+  padding: 0.9em 2em;
 }
 
 .pesquisa__input {
@@ -10,8 +10,8 @@
   background-color: #ffffff;
   color: #000000;
   border-radius: 24px;
-  padding: 1rem;
-  width: 60%;
+  padding: 0.9rem;
+  width: 50%;
   padding-left: 2rem;
 }
 
@@ -26,3 +26,29 @@
   background-position: right;
   background-size: contain;
 }
+
+/*=============== Responsividade =============*/
+@media (max-width:630px) {
+  .pesquisa {
+    width: 100%;
+    padding: 2px;
+  }
+ .pesquisa__input {
+  padding: 0.6rem;
+  width: 100%;
+}
+.pesquisa__input::placeholder {
+  padding-left: 0.2rem;
+  font-family: "Lato";
+  font-size: 15px;
+  font-weight: 400;
+  text-align: left;
+  color: #acacac;
+  background: url("../img/lupa.svg") no-repeat;
+  background-position: right;
+  background-size: contain;
+}
+  
+}
+
+
