--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -3,7 +3,7 @@
   background-color: #ffffff;
   display: flex;
   justify-content: space-between;
-  padding: 2rem 8rem;
+  padding: 0.5rem 8rem;
   font-family: "Lato";
   font-weight: 400;
   font-size: 16px;
@@ -18,7 +18,9 @@
   list-style: none;
   padding: 0 1rem;
 }
-
+.redes{
+  display: flex ;
+}
 .redes .menu__item {
   padding: 0;
 }
@@ -49,4 +51,73 @@
   padding: 0.5rem 0rem;
   border-radius: 5px;
   opacity: 0.7;
+}
+
+.menu-bar{
+  cursor: pointer;
+  display: none;
+}
+
+.menu-bar .bar{
+  display: block;
+  width: 28px;
+  height: 3px;
+  border-radius: 3px;
+  background-color: #000000;
+  margin: 5px auto;
+  transition: all 0.3s;
+}
+.menu-bar .bar:nth-child(1),
+.menu-bar .bar:nth-child(3){
+  background-color: #bd2d16;
+}
+
+/*=============== Responsividade =============*/
+@media(max-width: 890px) {
+  .cabecalho{
+    padding: 20px 3%;
+    transition: 0.4s;
+  }
+
+  .menu__lista{
+    display: none;
+    right: 100%;
+
+  }
+  .menu-bar{
+    display: block;
+  }
+  .menu-bar.ativo .bar:nth-child(1){
+    transform: translateY(8px) rotate(45deg);
+  }
+  .menu-bar.ativo .bar:nth-child(1){
+    opacity: 0;
+  }
+  .menu-bar.ativo .bar:nth-child(3){
+    transform: translateY(- 8px) rotate(-45deg);
+  }
+}
+
+@media(max-width: 630px) {
+  .cabecalho{
+    padding: 00px 3%;
+    transition: 0.4s;
+  }
+
+  .menu__lista{
+    display: none;
+
+  }
+  .menu-bar{
+    display: block;
+  }
+  .menu-bar.ativo .bar:nth-child(1){
+    transform: translateY(8px) rotate(45deg);
+  }
+  .menu-bar.ativo .bar:nth-child(1){
+    opacity: 0;
+  }
+  .menu-bar.ativo .bar:nth-child(3){
+    transform: translateY(- 8px) rotate(-45deg);
+  }
 }
