--- a/css/header-marca.css
+++ b/css/header-marca.css
@@ -15,7 +15,6 @@ nav {
 	flex-direction: row;
 	justify-content: center;
 	padding-top: 15px;
-	z-index: 1;
 }
 
 nav ul.nav-principal {
@@ -38,7 +37,7 @@ nav ul.nav-principal li {
 .nav--link:hover {
 	color: #ffffff;
 	background-color: #000000;
-	padding: 0.5rem 1rem;
+	padding: 0.4rem 0.6rem;
 	border-radius: 5px;
 	opacity: 0.7;
 }
@@ -71,7 +70,6 @@ section.carousel {
 }
 
 #img-banner img {
-	position: absolute;
 	width: 100%;
 }
 
@@ -81,7 +79,7 @@ div.carousel-text {
 	width: 30%;
 	align-self: center;
 	position: relative;
-	left: -180px;
+	left: -500px;
 	top: -35px;
 }
 
@@ -119,11 +117,19 @@ i.carousel-arrow {
 	left: 98%;
 }
 
+.slide-indicators {
+	display: flex;
+	position: absolute;
+	top: 90%;
+	left: 47%;
+}
+
 @media (max-width: 1366px) {
-	#img-banner {
-		left: 0;
-	}
 	div.carousel-text {
-		left: 0;
+		left: -550px;
+	}
+	#arrow-right {
+		transform: rotate(90deg);
+		left: 96%;
 	}
 }
