consertado banner e fonte

--- a/css/banner.css
+++ b/css/banner.css
@@ -1,151 +1,147 @@
 .swiper-slide img {
-  width: 100%;
+	width: 100%;
 }
 
 .swiper-slide {
-  /* display: inline-block; */
-  position: relative;
+	/* display: inline-block; */
+	position: relative;
 }
 
 .conteudo {
-  width: 40%;
-  font-family: "Lato";
-  position: absolute;
-  text-align: left;
-  top: 30%;
-  right: 1%;
-  color: #000000;
+	width: 40%;
+	font-family: 'Lato';
+	position: absolute;
+	text-align: left;
+	top: 30%;
+	right: 1%;
+	color: #000000;
 }
 
 .conteudo-um {
-  font-size: 20px;
+	font-size: 20px;
 }
 
 .conteudo h2 {
-  font-weight: 900;
-  font-size: 64px;
-  margin: auto;
-  padding-top: 1rem;
+	font-weight: 900;
+	font-size: 64px;
+	margin: auto;
+	padding-top: 1rem;
 }
 
 .conteudo-dois {
-  font-size: 24px;
-  word-break: normal;
-  padding-top: 1rem;
-  padding-bottom: 3rem;
+	font-size: 24px;
+	word-break: normal;
+	padding-top: 1rem;
+	padding-bottom: 3rem;
 }
 
 .conteudo a {
-  background-color: #000000;
-  color: #ffffff;
-  padding: 0.5rem 1rem;
-  cursor: pointer;
-  text-decoration: none;
+	background-color: #000000;
+	color: #ffffff;
+	padding: 0.5rem 1rem;
+	cursor: pointer;
+	text-decoration: none;
 }
 
 .conteudo a:hover {
-  padding: 0.7rem 1.2rem;
+	background-color: #606060;
 }
 
 .swiper-button-prev,
 .swiper-button-next {
-  color: #000000;
+	color: #000000 !important;
 }
 
 .swiper-pagination {
-  position: absolute;
-  margin: 0.5em 0;
+	position: absolute;
+	margin: 0.5em 0;
 }
 
 .swiper-pagination-bullet-active {
-  opacity: var(--swiper-pagination-bullet-opacity, 1);
-  background: #000000;
+	opacity: var(--swiper-pagination-bullet-opacity, 1);
+	background: #000000 !important;
 }
 
 .swiper-pagination-bullet {
-  width: 28px;
-  height: 5px;
-  display: inline-block;
-  border-radius: 5%;
+	width: 28px !important;
+	height: 5px !important;
+	display: inline-block !important;
+	border-radius: 5% !important;
 }
 
 /*=============== Responsividade =============*/
 @media (max-width: 630px) {
-  .swiper-slide img{
-    width: 100%;
-  }
-  .conteudo {
-    width: 40%;
-    font-family: "Lato";
-    position: absolute;
-    text-align: left;
-  }
-  .conteudo-um {
-    font-size: 18px;
-  }
+	.swiper-slide img {
+		width: 100%;
+	}
+	.conteudo {
+		width: 40%;
+		font-family: 'Lato';
+		position: absolute;
+		text-align: left;
+	}
+	.conteudo-um {
+		font-size: 18px;
+	}
 
-  .conteudo h2 {
-    font-weight: 900;
-    font-size: 25px;
-    margin: auto;
-    padding-top: 1rem;
-  }
-  
-  .conteudo-dois {
-    font-size: 14px;
-    word-break: inherit;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-  }
+	.conteudo h2 {
+		font-weight: 900;
+		font-size: 25px;
+		margin: auto;
+		padding-top: 1rem;
+	}
 
-  .conteudo a {
-    font-size: 9px;
-    background-color: #000000;
-    color: #ffffff;
-    padding: 0.4rem 0.4rem;
-    cursor: pointer;
+	.conteudo-dois {
+		font-size: 14px;
+		word-break: inherit;
+		padding-top: 1rem;
+		padding-bottom: 1rem;
+	}
 
-  }
- 
+	.conteudo a {
+		font-size: 9px;
+		background-color: #000000;
+		color: #ffffff;
+		padding: 0.4rem 0.4rem;
+		cursor: pointer;
+	}
 }
 
 @media (max-width: 350px) {
-  .swiper-slide img{
-    width: 100%;
-  }
-  .conteudo {
-    width: 40%;
-    font-family: "Lato";
-    position: absolute;
-    text-align: left;
-    top: 30%;
-    right: 1%;
-  }
-  .conteudo-um {
-    font-size: 13px;
-  }
+	.swiper-slide img {
+		width: 100%;
+	}
+	.conteudo {
+		width: 40%;
+		font-family: 'Lato';
+		position: absolute;
+		text-align: left;
+		top: 30%;
+		right: 1%;
+	}
+	.conteudo-um {
+		font-size: 13px;
+	}
 
-  .conteudo h2 {
-    font-weight: 700;
-    font-size: 13px;
-    margin: auto;
-    padding-top: 0.5rem;
-  }
-  
-  .conteudo-dois {
-    font-size: 14px;
-    word-break: inherit;
-    padding-top: 1rem;
-    padding-bottom: 3rem;
-  }
+	.conteudo h2 {
+		font-weight: 700;
+		font-size: 13px;
+		margin: auto;
+		padding-top: 0.5rem;
+	}
 
-  .conteudo a {
-    font-size: 14px;
-    background-color: #000000;
-    color: #ffffff;
-    padding: 0.3rem 0.3rem;
-    cursor: pointer;
+	.conteudo-dois {
+		font-size: 14px;
+		word-break: inherit;
+		padding-top: 1rem;
+		padding-bottom: 3rem;
+	}
 
-  }
- 
+	.conteudo a {
+		font-size: 14px;
+		background-color: #000000;
+		color: #ffffff;
+		padding: 0.3rem 0.3rem;
+		cursor: pointer;
+	}
 }
