--- a/css/pagina-produto.css
+++ b/css/pagina-produto.css
@@ -1,3 +1,9 @@
+@import './style.css';
+@import './cabecalho.css';
+@import './busca.css';
+@import './produtos.css';
+@import './footer.css';
+
 body,
 html {
 	font-family: 'Lato' !important;
