--- a/css/login-form.css
+++ b/css/login-form.css
@@ -31,16 +31,16 @@
 .form input {
   display: block;
   margin: 1rem auto;
-  width: 297px;
+  width: 17.563rem;
   height: 36px;
   left: 585px;
   top: 466px;
   border: 1px solid #888888;
   border-radius: 5px;
+  padding: 0 1rem;
 }
 
 .form input::placeholder {
-  padding: 1rem;
   color: #acacac;
 }
 .esqueci__senha {
