--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -1,7 +1,33 @@
+.section__cadastro {
+  box-sizing: border-box;
+  margin: 0 8.7rem;
+}
+
 .cadastro {
-  padding: 4rem 8rem 1rem;
+  padding: 4rem 0 1rem 0.5rem;
   font-family: "Lato";
   align-items: center;
+  display: flex;
+  justify-content: space-between;
+  /* width: 72.5rem; */
+  /* margin: 0 8.7rem; */
+  border-bottom: solid;
+  text-align: center;
+}
+
+.cadastro__titulo {
+  display: flex;
+  gap: 1.75rem;
+}
+
+.cadastro__estapa {
+  display: flex;
+  gap: 1.25rem;
+}
+
+.teste {
+  display: flex;
+  gap: 1rem;
 }
 
 .cadastro__container {
@@ -15,8 +41,6 @@
 
 .cadastro h3 {
   font-size: 25px;
-  border-bottom: solid;
-  padding-bottom: 0.5rem;
   text-align: right;
   font-weight: 900;
   display: flex;
@@ -24,54 +48,52 @@
   justify-content: space-between;
 }
 
-.cadastro__circuloamarelo
-    {
-    display:inline-table;
-    width:29.66px;
-    height:29.66px;
-    border-radius:25px;
-    font-size:15px;
-    color:#000000;
-    line-height:29.66px;
-    text-align:center;
-    background:#F8A912; 
-    }
+.cadastro__circuloamarelo {
+  display: inline-table;
+  width: 29.66px;
+  height: 29.66px;
+  border-radius: 25px;
+  font-size: 15px;
+  color: #000000;
+  line-height: 29.66px;
+  text-align: center;
+  background: #f8a912;
+}
 
-.cadastro__circulocinza
-    {
-    display:inline-table;
-    width:29.66px;
-    height:29.66px;
-    border-radius:25px;
-    font-size:15px;
-    color:#000000;
-    line-height:29.66px;
-    text-align:center;
-    background:#DCDCDC; 
-    }
+.cadastro__circulocinza {
+  display: inline-table;
+  width: 29.66px;
+  height: 29.66px;
+  border-radius: 25px;
+  font-size: 15px;
+  color: #000000;
+  line-height: 29.66px;
+  text-align: center;
+  background: #dcdcdc;
+}
 
 .form {
-    text-align: left;
-    font-family: "Lato";
-    padding: 1rem 1rem 1rem 8rem;
+  text-align: center;
+  font-family: "Lato";
+  /* padding: 1rem 1rem 1rem 8rem; */
 }
 
 .form input {
-    display: inline-flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    margin: 1rem auto;
-    width: 47%;
-    height: 36px;
-    left: 585px;
-    top: 466px;
-    border: 1px solid #888888;
-    border-radius: 5px;
+  display: inline-flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  margin: 1rem auto;
+  width: 47%;
+  height: 36px;
+  left: 585px;
+  top: 466px;
+  border: 1px solid #888888;
+  border-radius: 5px;
 }
-    
+
 .form input::placeholder {
-    padding: 1rem;
-    color: #acacac;
+  padding: 1rem;
+  color: #acacac;
 }
 
 .form span {
@@ -81,6 +103,7 @@
   color: #cf1010;
   padding: 0rem 0rem 0rem 0rem;
   text-align: left;
+  margin: 1rem;
 }
 
 .cadastro__botao {
