--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -33,23 +33,23 @@
   color: #000000;
 }
 
-.menu__link:hover {
+/* .menu__link:hover {
   text-decoration: underline;
 }
-
+ */
 .menu__linka {
   color: #000000;
   text-decoration: none;
   margin-right: 1.25rem;
 }
 
-.menu__linka:hover {
+/* .menu__linka:hover {
   color: #ffffff;
   background-color: #000000;
   padding: 0.5rem 0rem;
   border-radius: 5px;
   opacity: 0.7;
-}
+} */
 
 .menu-bar {
   cursor: pointer;
