--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,12 +14,13 @@ html {
 
 .btn-geral {
 	font-size: 14pt;
-	width: 11rem;
+	width: max-content;
 	height: 3rem;
 	border-radius: 0;
 	border: 1px solid;
 	background-color: #000000;
 	color: #ffffff;
+	padding: 0.313rem 3.125rem;
 }
 
 .btn-geral:hover {
