Mensagem de 'adicionado ao carrinho'

--- a/pages/lists/listAcessories/style.css
+++ b/pages/lists/listAcessories/style.css
@@ -430,3 +430,15 @@ p.cnpj{
     padding-bottom: 5rem;
     background-color:#F3F0EB ;
 }
+/* 
+.sacola{
+    background-color: white;
+    border-radius: 5rem;
+    transition-property: all;
+    transition-duration: 0.5s; 
+}  
+
+img.clicked {
+    background-color: rgb(240, 153, 24);
+    
+} */
