--- a/src/css/pagina_de_carrinho.css
+++ b/src/css/pagina_de_carrinho.css
@@ -19,6 +19,7 @@ a{
 }
 
 
+
 .carrinho_compra{
     padding: 7rem 10% 2.2rem 10%;
 }
@@ -28,6 +29,32 @@ a{
     align-items: center;
     justify-content: space-between;
 
+}
+
+#mais_menos {
+	display: flex;
+	flex-direction: row;
+}
+
+.btn-quantidade {
+	background-color: black;
+	color: white;
+	width: 2.3rem;
+	text-align: center;
+	font-size: 1.5rem;
+    padding-top: 0.2rem;
+}
+
+.btn-quantidade:hover {
+	background-color: rgb(60, 60, 60);
+	cursor: pointer;
+	user-select: none;
+}
+
+#input-quantidade {
+	width: 3rem;
+	font-size: 20px;
+	text-align: center;
 }
 
 .titulo_carrinho{
@@ -63,6 +90,14 @@ a{
     text-align: center;
     padding: 0% 1.5rem 0% 1.5rem;    
 }
+
+.hv_preto{
+	background-color: grey;
+    border:2px solid grey;
+	cursor: pointer;
+	user-select: none;
+}
+
 
 #linha-horizontal1{
     width: 80%;
@@ -117,7 +152,6 @@ textarea:focus, input:focus {
     display:flex;
     justify-content: space-between;
     align-items: center;
-    gap: 10%;
     font-family: 'Lato';
     font-style: normal;
     font-weight: 400;
@@ -131,7 +165,7 @@ textarea:focus, input:focus {
 }
 
 .carrinho_direita{
-    justify-content: right;
+    justify-content: center;
     display: flex;
     font-family: 'Lato';
     font-style: normal;
@@ -193,7 +227,6 @@ textarea:focus, input:focus {
     max-width: 100%;
     padding: 1.2rem 3rem 1.2rem 2rem;
     display:flex;
-    justify-content: space-between;
     align-items: center;
     gap: 10%;
     font-family: 'Lato';
@@ -230,11 +263,14 @@ textarea:focus, input:focus {
 
 .frete{
     display: flex;
+    justify-content: space-between;
     
 }
 
 
 .valor_frete{
+    
+    
     font-family: 'Lato';
     font-style: normal;
     font-weight: 400;
@@ -242,8 +278,8 @@ textarea:focus, input:focus {
     line-height: 24px;
     text-align: center;
     color: #000000;
-    gap: 4rem;
-    justify-content: space-between;
+
+    
 }
 
 .soma_carrinho{
@@ -340,6 +376,13 @@ textarea:focus, input:focus {
     margin: 6rem 0 2rem 0;
 }
 
+.hv_amarelo{
+	background-color: rgb(197, 71, 33);
+   	cursor: pointer;
+	user-select: none;
+}
+
+
 .fim_carrinho{
     display: flex;
     justify-content: space-between;
@@ -369,26 +412,6 @@ textarea:focus, input:focus {
     height: 27px;
 }
 
-#num{
-    border: #000 solid 2px;
-    padding: -1rem;
-    width: 50px;
-    font-family: 'Lato';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 30px;
-    text-align: center;
-        }
-        input[type="number"]::-webkit-outer-spin-button,
-        input[type="number"]::-webkit-inner-spin-button {
-            -webkit-appearance: none;
-            margin: 0;
-        }
-
-        /* input[type="number"] {
-            -moz-appearance: textfield;
-        } */
 
 .barra_cep{
 
@@ -404,3 +427,11 @@ textarea:focus, input:focus {
     top: 1031px;
     border: 1px solid #888888;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
