--- a/assets/css/popUp.css
+++ b/assets/css/popUp.css
@@ -3,9 +3,9 @@
 #container-pop-up {
 	width: 36.938rem;
 	height: 32.625rem;
-	position: absolute;
+	position: fixed;
 	top: 15%;
-	left: 35%;
+	left: 30%;
 	z-index: 4;
 	justify-content: center;
 	background-color: #fbf7f2;
